--- a/SheSafeProject/templates/buddy.html
+++ b/SheSafeProject/templates/buddy.html
@@ -160,7 +160,7 @@
     <div id="suggestionsContainer">
       <div class="suggestion-entry">
         <strong>Priyanshu Kumar</strong><br>
-        📍 Location: MIT-USA<br>
+        📍 Location: Microtek Group of Institutions<br>
         📞 Contact: ABCD
       </div>
       <div class="suggestion-entry">
